--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         style="@android:style/Widget.Button.Inset"
         android:layout_width="258dp"
         android:layout_height="56dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/btn_bg"
+        android:foreground="?selectableItemBackground"
         android:rotationX="2"
         android:text="@string/puton"
         android:textColor="@color/white"
