--- a/app/src/main/res/layout-v26/activity_retouching.xml
+++ b/app/src/main/res/layout-v26/activity_retouching.xml
@@ -1,74 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
-    tools:context=".Retouching">
+    android:background="@color/black"
+    android:orientation="vertical">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout"
-        android:layout_width="408dp"
-        android:layout_height="596dp"
-        android:background="#1E1D1D"
-        android:fitsSystemWindows="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <include layout="@layout/retouching_anctionbar" />
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:background="#1E1D1D"
-            android:fitsSystemWindows="true">
-
-
-        </com.google.android.material.appbar.AppBarLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="592dp">
 
         <ImageView
             android:id="@+id/retouchingphoto"
             android:layout_width="match_parent"
-            android:layout_height="596dp"
+            android:layout_height="match_parent"
+            android:contentDescription="@null"
             android:fitsSystemWindows="true"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            tools:ignore="ContentDescription" />
+            />
 
         <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="107dp"
-            android:layout_height="63dp"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:max="100"
-            android:visibility="gone"
-            />
-        
+            android:id="@+id/progressbar"
+            android:layout_width="76dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="invisible" />
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="410dp"
-        android:layout_height="137dp"
-        android:background="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/toolList"
+    <RelativeLayout
+        android:id="@+id/content_container"
+        android:layout_width="match_parent"
+        android:layout_height="55dip"
+        android:gravity="center"
+        android:paddingLeft="15dip"
+        android:paddingRight="15dip">
+
+        <SeekBar
+            android:id="@+id/seekBar_bright"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:max="255"
+            android:progress="127"
+            android:secondaryProgress="75"
+            android:visibility="invisible"
+            android:background="@android:color/transparent"
+            android:thumb="@drawable/camerasdk_icon_seek_thumb"/>
+
+        <SeekBar
+            android:id="@+id/seekBar_cpy"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:max="255"
+            android:min="0"
+            android:thumb="@drawable/camerasdk_icon_seek_thumb"
+            android:visibility="gone"/>
+
+        <SeekBar
+            android:id="@+id/seekBar_baohe"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:max="255"
+            android:progress="127"
+            android:secondaryProgress="75"
+            android:thumb="@drawable/camerasdk_icon_seek_thumb"
+            android:visibility="gone"/>
+        <SeekBar
+            android:id="@+id/seekBar_Hue"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:max="255"
+            android:progress="127"
+            android:secondaryProgress="75"
+            android:thumb="@drawable/camerasdk_icon_seek_thumb"
+            android:visibility="gone"/>
+        <SeekBar
+            android:id="@+id/seekBar_noise"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:max="25"
+            android:min="0"
+            android:progress="12"
+            android:thumb="@drawable/camerasdk_icon_seek_thumb"
+            android:visibility="gone"/>
+        <SeekBar
+            android:id="@+id/seekBar_ruihua"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:max="255"
+            android:progress="127"
+            android:secondaryProgress="75"
+            android:thumb="@drawable/camerasdk_icon_seek_thumb"
+            android:visibility="gone"/>
+        <SeekBar
+            android:id="@+id/seekBar_tou"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:max="255"
+            android:progress="127"
+            android:secondaryProgress="75"
+            android:thumb="@drawable/camerasdk_icon_seek_thumb"
+            android:visibility="gone"/>
+
+    </RelativeLayout>
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
+        <RadioGroup
+            android:id="@+id/layout_tab"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingBottom="8sp"
-            tools:ignore="MissingConstraints" />
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:background="@color/black">
 
-    </LinearLayout>
+            <RadioButton
+                android:id="@+id/button_brightness"
+                style="@style/camera_radio_button"
+                android:text="亮度"
+                android:textColor="@color/btn_text_color"
+                android:drawableTop="@drawable/btn_selector_light"/>
+            <RadioButton
+                android:id="@+id/button_contrast"
+                style="@style/camera_radio_button"
+                android:text="对比度"
+                android:textColor="@color/btn_text_color"
+                android:drawableTop="@drawable/btn_selector_cpy"
+                android:layout_marginStart="50dip"/>
 
+            <RadioButton
+                android:id="@+id/button_ruihua"
+                style="@style/camera_radio_button"
+                android:layout_marginStart="50dip"
+                android:drawableTop="@drawable/btn_selector_ruihua"
+                android:minWidth="48dp"
+                android:textColor="@color/btn_text_color"
+                android:text="锐化" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <RadioButton
+                android:id="@+id/button_noise"
+                style="@style/camera_radio_button"
+                android:layout_marginStart="50dip"
+                android:drawableTop="@drawable/btn_selector_noise"
+                android:minWidth="48dp"
+                android:textColor="@color/btn_text_color"
+                android:text="颗粒" />
+
+            <RadioButton
+                android:id="@+id/button_Hue"
+                style="@style/camera_radio_button"
+                android:layout_marginStart="50dip"
+                android:drawableTop="@drawable/btn_selector_hue"
+                android:minWidth="48dp"
+                android:textColor="@color/btn_text_color"
+                android:text="色调" />
+            <RadioButton
+                android:id="@+id/button_baohe"
+                style="@style/camera_radio_button"
+                android:layout_marginStart="50dip"
+                android:drawableTop="@drawable/btn_selector_baohe"
+                android:textColor="@color/btn_text_color"
+                android:text="饱和度" />
+            <RadioButton
+                android:id="@+id/button_tou"
+                style="@style/camera_radio_button"
+                android:layout_marginStart="50dip"
+                android:drawableTop="@drawable/btn_selector_tou"
+                android:textColor="@color/btn_text_color"
+                android:text="透明度" />
+        </RadioGroup>
+    </HorizontalScrollView>
+</LinearLayout>
