--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     >
+<!--    <androidx.appcompat.widget.AppCompatSeekBar-->
+<!--        android:layout_width="166dp"-->
+<!--        android:layout_height="22dp"-->
+<!--        android:id="@+id/adjustBar"-->
+<!--        android:layout_gravity="center"-->
+<!--        />-->
 
 
-
-</FrameLayout>
+</LinearLayout>
