--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,16 @@
         <item name="colorPrimary">#1E1D1D</item>
         <item name="colorPrimaryDark">#1E1D1D</item>
     </style>
+    <style name="camera_radio_button" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:button">@null</item>
+        <item name="android:background">@null</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:drawablePadding">3dip</item>
+    </style>
+
 </resources>
