--- a/app/src/main/res/layout-v26/activity_retouching.xml
+++ b/app/src/main/res/layout-v26/activity_retouching.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
     android:orientation="vertical">
 
@@ -26,8 +27,23 @@
             android:layout_centerInParent="true"
             android:visibility="invisible" />
 
-    </RelativeLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/apply"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:rippleColor="@color/ripple_color"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom|end"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="11dp"
+            android:contentDescription="TODO"
+            android:src="@drawable/ic_done"
+            app:elevation="10dp" />
 
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/content_container"
@@ -39,18 +55,18 @@
 
         <SeekBar
             android:id="@+id/seekBar_bright"
-            android:layout_width="fill_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:max="255"
             android:progress="127"
             android:secondaryProgress="75"
-            android:visibility="invisible"
-            android:background="@android:color/transparent"
-            android:thumb="@drawable/camerasdk_icon_seek_thumb"/>
+            android:thumb="@drawable/camerasdk_icon_seek_thumb"
+            android:visibility="invisible" />
 
         <SeekBar
             android:id="@+id/seekBar_cpy"
-            android:layout_width="fill_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:max="255"
             android:min="0"
@@ -59,7 +75,7 @@
 
         <SeekBar
             android:id="@+id/seekBar_baohe"
-            android:layout_width="fill_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:max="255"
             android:progress="127"
@@ -68,7 +84,7 @@
             android:visibility="gone"/>
         <SeekBar
             android:id="@+id/seekBar_Hue"
-            android:layout_width="fill_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:max="255"
             android:progress="127"
@@ -77,7 +93,7 @@
             android:visibility="gone"/>
         <SeekBar
             android:id="@+id/seekBar_noise"
-            android:layout_width="fill_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:max="25"
             android:min="0"
@@ -86,7 +102,7 @@
             android:visibility="gone"/>
         <SeekBar
             android:id="@+id/seekBar_ruihua"
-            android:layout_width="fill_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:max="255"
             android:progress="127"
@@ -95,7 +111,7 @@
             android:visibility="gone"/>
         <SeekBar
             android:id="@+id/seekBar_tou"
-            android:layout_width="fill_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:max="255"
             android:progress="127"
