--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FBFBFB</color>
     <color name="superDark">#000000</color>
     <color name="backDark">#1E1D1D</color>
     <color name="letterColor">#B1ED1D</color>
