--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/colorBackground"
+    android:background="#FEFEFE"
     tools:context=".MainActivity">
 
 
     <Button
         android:id="@+id/fromalbum"
         style="@android:style/Widget.Button.Inset"
-        android:layout_width="258dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="210dp"
-        android:layout_marginBottom="104dp"
+        android:layout_width="259dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="27dp"
         android:background="@drawable/btn_bg"
         android:foreground="?selectableItemBackground"
         android:rotationX="2"
@@ -24,16 +23,14 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/take_photo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.311" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/take_photo"
-        android:layout_width="258dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="305dp"
+        android:layout_width="253dp"
+        android:layout_height="52dp"
+        android:layout_marginBottom="211dp"
         android:background="@drawable/btn_bg"
         android:foreground="?selectableItemBackground"
         android:rotationX="2"
@@ -45,5 +42,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fromalbum" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="62dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/appname" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="346dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="137dp"
+        app:layout_constraintBottom_toTopOf="@+id/fromalbum"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:srcCompat="@drawable/app_name3" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
