--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -11,62 +11,62 @@
     <Button
         android:id="@+id/fromalbum"
         style="@android:style/Widget.Button.Inset"
-        android:layout_width="259dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="27dp"
+        android:layout_width="266dp"
+        android:layout_height="66dp"
+        android:layout_marginBottom="193dp"
         android:background="@drawable/btn_bg"
         android:foreground="?selectableItemBackground"
-        android:rotationX="2"
+        android:rotationX="0"
         android:text="@string/puton"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/take_photo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
-    <Button
-        android:id="@+id/take_photo"
-        android:layout_width="253dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="211dp"
-        android:background="@drawable/btn_bg"
-        android:foreground="?selectableItemBackground"
-        android:rotationX="2"
-        android:text="@string/takePhone"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fromalbum" />
+        app:layout_constraintTop_toBottomOf="@+id/take_photo" />
+
+    <Button
+        android:id="@+id/take_photo"
+        android:layout_width="266dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="73dp"
+        android:layout_marginEnd="73dp"
+        android:layout_marginBottom="23dp"
+        android:background="@drawable/btn_bg"
+        android:foreground="?selectableItemBackground"
+        android:rotationX="0"
+        android:text="@string/takePhone"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/fromalbum"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/retouchingPis" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="62dp"
-        android:layout_marginEnd="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        android:id="@+id/ugly"
+        android:layout_width="359dp"
+        android:layout_height="89dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="29dp"
+        app:layout_constraintBottom_toTopOf="@+id/retouchingPis"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/appname" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="346dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="31dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginBottom="137dp"
-        app:layout_constraintBottom_toTopOf="@+id/fromalbum"
+        android:id="@+id/retouchingPis"
+        android:layout_width="340dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="189dp"
+        app:layout_constraintBottom_toTopOf="@+id/take_photo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/ugly"
         app:srcCompat="@drawable/app_name3" />
 
 
